Closed Bug 1325516 Opened 8 years ago Closed 8 years ago

Failures in 2.0.0/deqp/functional/gles3/negativebufferapi.html

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

Details

(Whiteboard: gfx-noted)

Attachments

(2 files)

      No description provided.
Comment on attachment 8821397 [details]
Bug 1325516 - Simplify IMPL_COLOR_READ_FORMAT/TYPE and ensure that we only return valid ones. -

https://reviewboard.mozilla.org/r/100696/#review101376

r+ after fixing the GL_IMPLEMENTATION_COLOR_READ_TYPE issue

::: dom/canvas/WebGLContextGL.cpp:1444
(Diff revision 1)
> +    if (!gl->IsSupported(gl::GLFeature::ES2_compatibility))
> +        return defaultPI;
> +
> +    webgl::PackingInfo implPI;
> +    gl->fGetIntegerv(LOCAL_GL_IMPLEMENTATION_COLOR_READ_FORMAT, (GLint*)&implPI.format);
> +    gl->fGetIntegerv(LOCAL_GL_IMPLEMENTATION_COLOR_READ_FORMAT, (GLint*)&implPI.type);

Here should be GL_IMPLEMENTATION_COLOR_READ_TYPE?
Attachment #8821397 - Flags: review?(dmu) → review+
Comment on attachment 8821398 [details]
Bug 1325516 - Misc fixes. -

https://reviewboard.mozilla.org/r/100698/#review101382

r+ after fixing the opening issue.

::: dom/canvas/WebGLFramebuffer.cpp:1262
(Diff revision 1)
>  ////
>  
> +static bool
> +IsDrawBufferEnum(const WebGLContext* webgl, GLenum val)
> +{
> +

It seems to be redundant function? Please remove it.
Attachment #8821398 - Flags: review?(dmu) → review+
Comment on attachment 8821397 [details]
Bug 1325516 - Simplify IMPL_COLOR_READ_FORMAT/TYPE and ensure that we only return valid ones. -

https://reviewboard.mozilla.org/r/100696/#review101376

> Here should be GL_IMPLEMENTATION_COLOR_READ_TYPE?

Absolutely!
Comment on attachment 8821398 [details]
Bug 1325516 - Misc fixes. -

https://reviewboard.mozilla.org/r/100698/#review101382

> It seems to be redundant function? Please remove it.

Yep.
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5a10fa45d8ea
(flattened) - Misc fixes and simplify IMPL_COLOR_READ_FORMAT/TYPE and ensure that we only return valid ones. - r=daoshengmu
https://hg.mozilla.org/mozilla-central/rev/5a10fa45d8ea
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: